Ägora terminei a aula 9 de verdade

--- a/projeto (1)/bio.html
+++ b/projeto (1)/bio.html
@@ -78,7 +78,7 @@
             </ul>
         </aside>
         
-        <footer> &copy;Joao da Silva 2017</footer>
+        <footer class="rodape"> &copy;Joao da Silva 2017</footer>
         
     </body>
 
