--- a/projeto (1)/bio.html
+++ b/projeto (1)/bio.html
@@ -20,9 +20,9 @@
                 <p>Moro em São Paulo mas atendo clientes do mundo todo. Sou conhecido por fazer produtos de <em>qualidade</em>, <em>durabilidade</em> e que agregam valor para meus clientes.</p>
                 <p>Trabalho usando a web como plataforma, ou seja, respiro <strong>HTML5, CSS3 e JavaScript</strong> (ou melhor: ECMASCript). Crio sites para todos, seguindo as principais diretivas de acessibilidade, responsividade e web semântica, sem descuidar da qualidade de código.</p>
 
-                <h2>Como trabalho</h2>
+                <h2 class="subtitulo">Como trabalho</h2>
 
-                <blockquote>
+                <blockquote class="fiat">
                     <p>João é o melhor desenvolvedor front-end com quem já trabalhei. Muito eficiente e muito capaz. Recomendo sem dúvidas!</p>
                     <cite>José Souza, Fiat</cite>
                 </blockquote>
@@ -33,7 +33,7 @@
 
                 <h2>Experiência</h2>
 
-                <blockquote>
+                <blockquote class="petrobras">
                     <p>João domina as tecnologias como ninguém. Eu apresentava um problema, ele tinha na ponta da língua a solução mais adequada com as tecnologias mais recentes.</p>
                     <cite>Manoel Santos, Petrobrás</cite>
                 </blockquote>
@@ -42,15 +42,15 @@
                 <p>Já desenvolvi projetos para grandes empresas como <a href="http://www.bmw.com">BMW</a>, <a href="http://www.uol.com.br>">UOL</a> e <a href="http://www.ibm.com.br">IBM</a>. Neles, o foco principal era entregar uma experiência imersiva e impactante para o usuário final sem descuidar do desempenho e da acessibilidade da página.</p>
                 <p>Também já fui contratado para transformar <strong>grandes portais, como <a href="http://www.terra.com.br">Terra</a> e <a href="http://www.g1.globo.com">G1</a></strong>, em páginas responsivas. Fui responsável por renovar o layout, reorganizar o conteúdo e re-escrever o código de forma mais reaproveitável.</p>
 
-                <h2>Comunidade</h2>
+                <h2 class="subtitulo">Comunidade</h2>
 
                 <p>Procuro repassar meu conhecimento para a comunidade. Para isso, já dei <a href="portifolio.html">diversas palestras</a> e mantenho <a href="blog.html">um blog.</a></p>
             </div>
             
         </main>
         
-        <img src="eu.jpg" alt="Foto de  Joao da Silva">
-        <aside>
+        <img class="foto" src="eu.jpg" alt="Foto de  Joao da Silva">
+        <aside class="menu">
             <h1>Joao da Silva</h1>
             <nav>
                 <ul>
