--- a/projeto (1)/bio.html
+++ b/projeto (1)/bio.html
@@ -31,7 +31,7 @@
 
                 <p>Também não trabalho com prazos fechados: qualidade é importante demais para ser sacrificada.</p>
 
-                <h2>Experiência</h2>
+                <h2 class="subtitulo">Experiência</h2>
 
                 <blockquote class="petrobras">
                     <p>João domina as tecnologias como ninguém. Eu apresentava um problema, ele tinha na ponta da língua a solução mais adequada com as tecnologias mais recentes.</p>
